erDiagram
    TEMPORADA {
        int id PK
        date fecha_inicial
        date fecha_final
        timestamp created_at
        timestamp updated_at
    }
    
    CUADRILLA {
        int id PK
        int lider_cuadrilla_id FK "NULL"
        string lote
        int variedad_id FK "NULL"
        int temporada_id FK "NULL"
        timestamp created_at
        timestamp updated_at
    }
    
    JORNALERO {
        int id PK
        string nombre
        int edad
        string estado "DEFAULT 'ACTIVO'"
        date fecha_contratacion
        int errores "DEFAULT 0"
        int cuadrilla_id FK "NULL"
        timestamp created_at
        timestamp updated_at
    }
    
    PRODUCCION {
        int id PK
        date fecha
        int cuadrilla_id FK
        int temporada_id FK
        real cantidad
        int tipo_empaque_id FK "NULL"
        int tipo_uva_id FK "NULL"
        int cliente_id FK "NULL"
        timestamp created_at
        timestamp updated_at
    }
    
    VARIEDAD {
        int id PK
        int codigo "UNIQUE"
        string nombre
        timestamp created_at
        timestamp updated_at
    }
    
    TIPO_UVA {
        int id PK
        int codigo "UNIQUE"
        string nombre
        timestamp created_at
        timestamp updated_at
    }
    
    TIPO_EMPAQUE {
        int id PK
        int codigo "UNIQUE"
        string nombre
        timestamp created_at
        timestamp updated_at
    }
    
    CLIENTE {
        int id PK
        int codigo "UNIQUE"
        string nombre
        timestamp created_at
        timestamp updated_at
    }
    
    TEMPORADA ||--o{ CUADRILLA : "tiene"
    TEMPORADA ||--o{ PRODUCCION : "tiene"
    CUADRILLA ||--o{ JORNALERO : "tiene"
    CUADRILLA ||--o{ PRODUCCION : "registra"
    CUADRILLA }o--|| JORNALERO : "liderada_por"
    CUADRILLA }o--|| VARIEDAD : "cultiva"
    TIPO_UVA ||--o{ PRODUCCION : "clasifica"
    TIPO_EMPAQUE ||--o{ PRODUCCION : "clasifica"
    CLIENTE ||--o{ PRODUCCION : "destina"